# gameserver

./: .gitmodules  Cargo.toml
client/: Cargo.toml
client/src/: event.rs  lib.rs  main.rs  proto.rs
server/: Cargo.toml
server/src/: game.rs  lib.rs  proto.rs
shared/: Cargo.toml
shared/src/: game.rs  lib.rs  players.rs  proto.rs
src/: client.rs  game.rs  main.rs  server.rs
